unpackaged/main/default/objects/Transaction__c/fields/Chargeback_ID__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_ID__c</fullName>
    <label>Chargeback ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>