unpackaged/main/default/objects/Transaction__c/fields/Course_UUID__c.field-meta.xml
<CustomField>
    <fullName>Course_UUID__c</fullName>
    <label>Course UUID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>