unpackaged/main/default/objects/Transaction__c/fields/Faculty_ID__c.field-meta.xml
<CustomField>
    <fullName>Faculty_ID__c</fullName>
    <label>Faculty ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>