unpackaged/main/default/objects/Transaction__c/fields/Order_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Order_Identifier__c</fullName>
    <description>Unique identifier for a Payments Order</description>
    <label>Order Identifier</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>