unpackaged/main/default/objects/Transaction__c/fields/Product_Instance_UUID__c.field-meta.xml
<CustomField>
    <fullName>Product_Instance_UUID__c</fullName>
    <label>Product Instance UUID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>