unpackaged/main/default/objects/Transaction__c/fields/Purchaser_State__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_State__c</fullName>
    <label>Purchaser State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>