unpackaged/main/default/objects/Transaction__c/fields/Purchaser_UUID__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_UUID__c</fullName>
    <label>Purchaser_UUID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>