unpackaged/main/default/objects/Transaction__c/fields/Transaction_Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Error_Msg__c</fullName>
    <label>Transaction Error Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>