unpackaged/main/default/objects/Transaction__c/fields/Transaction_Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Refund_Reason__c</fullName>
    <label>Transaction Refund Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>