unpackaged/main/default/objects/Transaction__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Chargeback-Open</fullName>
            </value>
            <value>
                <fullName>Chargeback-Win</fullName>
            </value>
            <value>
                <fullName>Chargeback-Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>