unpackaged/main/default/objects/Transaction__c/fields/Tutor_Course__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tutor Course</label>
    <referenceTo>Tutor_Course__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>